# src/module/admin/dto/admin-post.request.ts
@@ -20,6 +20,7 @@ export class AdminGetPostsRequest {
 
   @ApiProperty({
     enum: GetPostsRequestTypes,
+    enumName: 'PostTypeFilter',
     required: false,
     default: 'ALL',
   })
